css/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  color: white;
  font-family: "Poppins", sans-serif;
}

ul {
  list-style-type: none;
}

/* Utilities */
.wrapper {
  display: flex;
  flex-wrap: wrap;
}

/* Header */
header {
  width: 200px;
  height: calc(100vh - 100px);
  background-color: black;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.top-menu {
  width: 100%;
}

.logo,
.navigation,
.playlists {
  padding: 1rem;
  width: 100%;
}

header .logo {
  width: 80%;
}

header .navigation li {
  color: #707070;
}
header .navigation li:hover {
  color: white;
  border-left: 3px solid yellowgreen;
}

header .navigation li img {
  width: 20px;
  margin-right: 0.5rem;
}

/* Playlists */
header .playlists {
  font-size: 0.8rem;
  color: grey;
}
header .playlists h5 {
  font-size: 1.1rem;
  color: white;
}

header .playlists li {
  line-height: 2rem;
}

header .playlists li:first-child {
  font-size: 1rem;
}

header .playlists i {
  font-size: 1.7rem;
  color: white;
  margin-right: 0.3rem;
}

.bottom-menu {
  padding: 1rem;
}

.bottom-menu .download {
  padding-bottom: 0.5rem;
  border-bottom: 1px solid white;
  font-size: 0.7rem;
}

.bottom-menu .download {
  color: grey;
}

.bottom-menu span {
  font-weight: bold;
  padding-top: 0.5rem;
  margin-left: 0.5rem;
}

/* Main Content */
main {
  width: calc(100% - 200px);
  height: calc(100vh - 100px);
  background-color: #141922;
  overflow-y: scroll;
}

.button-bar,
.categories {
  padding: 1rem;
}

.button-bar {
  display: flex;
  justify-content: flex-end;
  background-color: #090b13;
}

button {
  font-size: 0.7rem;
  text-transform: uppercase;
  border: 1px solid white;
  color: white;
  border-radius: 50px;
  background-color: transparent;
  padding: 10px 20px;
}

.categories {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
}

.categories li {
  display: inline;
  width: calc((100% / 3) - 2rem);
  text-transform: uppercase;
  margin: 0 1rem;
  font-size: 0.8rem;
}

/* Sezione Dischi */

section.albums {
  padding: 1rem;
}

section.albums h2 {
  font-size: 1.3rem;
}

section.albums span {
  font-size: 0.8rem;
  color: grey;
}

.row {
  display: flex;
  flex-wrap: wrap;
  margin-top: 1rem;
}

.album {
  width: calc((100% / 2) - 1rem);
  margin-bottom: 1rem;
  margin-right: 1rem;
  text-align: center;
}
.album .album-info h3 {
  font-size: 0.8rem;
}

.album .album-info p {
  font-size: 0.7rem;
  color: grey;
}

.box-art img {
  width: 100%;
}

.rounded {
  border-radius: 50%;
}

/* Footer */
footer {
  width: 100%;
  height: 100px;
  background-color: blueviolet;
}

.player-container {
  max-width: 100%;
  height: 100%;
  padding: 1rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: #282828;
}

.now-playing,
.volume {
  max-width: 250px;
}

.now-playing,
.volume {
  height: 100%;
  display: flex;
  align-items: center;
}

.volume {
  justify-content: flex-end;
}

.now-playing p {
  font-size: 0.5rem;
}

.now-playing img {
  width: 50px;
}

.now-playing div {
  margin-right: 1rem;
}

.now-playing i {
  padding-right: 0.8rem;
}

.controls {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.controls i {
  font-size: 1.2rem;
  margin-inline: 0.5rem;
}

.controls i:nth-child(3) {
  font-size: 1.5rem;
}

.controls span {
  display: inline-block;
  font-size: 0.7rem;
  font-weight: bold;
  margin-inline: 0.6rem;
}

.controls .progress-bar,
.volume .volume-bar {
  display: inline-block;
  background-color: grey;
  border-radius: 5px;
  height: 7px;
}
.controls .progress-bar {
  min-width: 300px;
}

.fill-bar {
  width: 20%;
  height: 7px;
  background-color: white;
  border-radius: 5px;
}

.volume i {
  margin-left: 1rem;
}

.volume .volume-bar {
  width: 150px;
  margin-left: 1rem;
}

@media screen and (max-width: 575px) {
  main {
    width: calc(100% - 50px);
  }

  header {
    width: 50px;
  }

  .top-menu {
    line-height: 2rem;
  }

  header .logo {
    content: url("../img/logo-small.svg");
    width: 100%;
  }

  header span,
  .playlists {
    display: none;
  }

  .bottom-menu {
    text-align: center;
  }
}

@media screen and (min-width: 768px) {
  .album {
    width: calc((100% / 4) - 2rem);
  }
}

@media screen and (min-width: 992px) {
  .album {
    width: calc((100% / 6) - 2rem);
  }
}

